--- a/Electron/src/Home.css
+++ b/Electron/src/Home.css
@@ -13,7 +13,11 @@
     padding-left: 20px;
     padding-right: 20px;
 }
-
+.home-cnt button:hover{
+  background-color: black;
+  color: white;
+  border: 0.5px solid white;
+}
 .home-cnt {
   display: flex;
   flex-direction: column;
