--- a/Electron/src/index.css
+++ b/Electron/src/index.css
@@ -13,7 +13,7 @@
   flex-direction: column;
   justify-content: space-between;
   min-height: 100vh;
-  background-image: linear-gradient(black,black, rgb(25, 1, 33) , black);
+  background-image: linear-gradient(black,black, rgb(40, 1, 52) , black);
 }
 
 
@@ -37,6 +37,7 @@
   text-align: center;
   border-top: 2px solid #444; 
   margin-top: auto; 
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .b{
