--- a/Electron/src/Seed.css
+++ b/Electron/src/Seed.css
@@ -5,8 +5,8 @@
   padding: 20px;
   border-radius: 5px;
   text-align: center;
-  width: 80%;
-  margin-left: 10%;
+  width: 83vw;
+  margin-left: 7%;
   margin-top: 0px;
   font-family: "Arial", sans-serif;
   box-shadow: 0 4px 10px rgba(44, 43, 43, 0.2);
