--- a/Electron/src/Home.css
+++ b/Electron/src/Home.css
@@ -2,8 +2,8 @@
     border-color: black;
     color: rgb(4, 4, 4);
     border: 0px;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: x-large;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: larger;
     background-color: rgb(255, 255, 255);
     padding: 12px;
     border-radius: 8px;
@@ -12,6 +12,8 @@
     
     padding-left: 20px;
     padding-right: 20px;
+  border: 0.5px solid white;
+
 }
 
 .home-cnt button:hover{
