--- a/Electron/src/Wallet.css
+++ b/Electron/src/Wallet.css
@@ -1,30 +1,27 @@
 .wallet-body {
   font-family: Arial, sans-serif;
-  background-color: #f4f7fa;
-  padding: 20px;
-  max-width: 600px;
-  margin: auto;
+  background-color:rgba(128, 0, 128, 0);
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  text-align: center;
+
   margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items:baseline;
+  margin-left: 7%;
+  min-width: 83vw;
 }
 
 .wallet-body button {
-  background-color: #4CAF50; /* Green background */
-  color: white;
+  color: rgb(0, 0, 0);
   border: none;
-  padding: 10px 20px;
-  margin-bottom: 20px;
-  font-size: 16px;
-  border-radius: 5px;
+  padding: 9px 15px;
+  margin-right: 5px;
+  font-size: 13px;
+  border-radius: 4px;
   cursor: pointer;
-  transition: background-color 0.3s;
 }
 
-.wallet-body button:hover {
-  background-color: #45a049;
-}
 
 .wallet-body div {
   margin: 10px 0;
@@ -35,12 +32,11 @@
 .wallet-body div:last-child {
   font-weight: bold;
   font-size: 16px;
-  color: #2e7d32; /* Dark green color for public keys */
 }
 
 .add-wallet-btn {
   padding: 10px 20px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   cursor: pointer;
 }
 
@@ -68,4 +64,74 @@
 
 .key-value {
   font-family: monospace;
+}
+
+
+.wallet-body .buttons .dlt-btn{
+    background-color: rgb(255, 68, 0);
+    
+}
+
+
+.wallet-body .wal{
+  background-color: rgba(54, 49, 59, 0.634);
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  padding: 20px;
+  border-radius: 7px;
+  padding-top: 0;
+  width: 83vw;
+}
+
+.wallet-body .wal .hd{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.wallet-body .wal .hd h3{
+  color: white;
+  font-family:Arial, Helvetica, sans-serif;
+  font-size: 25px;
+}
+.wallet-body .wal .hd button{
+  color: red;
+  font-size: large;
+  font-weight: 400;
+  background-color: transparent;
+}
+
+.wallet-body .wal .key-cont h4{
+    color: rgb(251, 251, 251);
+    display: flex;
+    font-size: medium;
+    font-family:Arial, Helvetica, sans-serif;
+    margin-bottom: 5px;
+    align-items: center;
+    flex-direction: row;
+}
+
+.wallet-body .wal .key-cont p{
+
+  color: rgba(255, 255, 255, 0.614);
+  font-size: smaller;
+  margin-bottom:10px ;
+  
+}
+
+.wallet-body .imp{
+  color: white;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  justify-content: space-between;
+  width: 83vw;
+}
+
+
+.wallet-body .wal .key-cont h4>button{
+  background-color: transparent;
+  color: #ccc;
 }
